Prepare NPV8Object.h/cpp for upstreaming:

- remove #include bindings/npruntime.h from NPV8Object.cpp since that's also included in the NPV8Object.h
- add ARRAYSIZE_UNSAFE macro
- remove some TODOS

This will be checked in after the corresponding webkit bug gets landed.

See https://bugs.webkit.org/show_bug.cgi?id=33608