WebCore/bindings/v8/NPV8Object.h
@@ -31,10 +31,13 @@
 #define NPV8Object_h
 
 #if PLATFORM(CHROMIUM)
-// TODO(andreip): diff and consolidate
+// FIXME: Chromium uses a different npruntime.h, which is in
+// the Chromium source repository under third_party/npapi/bindings.
+// The Google-specific changes in that file should probably be
+// moved into bridge/npruntime.h, guarded by an #if PlATFORM(CHROMIUM).
 #include "bindings/npruntime.h"
 #else
-#include "bridge/npruntime.h"  // use WebCore version
+#include "bridge/npruntime.h"  // Use WebCore version for Android and other ports.
 #endif
 #include <v8.h>
 
